--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -189,9 +189,11 @@
         - 빈 팩토리 후처리기에서 실행됨(빈 후처리기가 아님)
           - 빈 후처리기는 매 빈 오브젝트가 만들어진 직후에 오브젝트의 내용이나 오브젝트 자체를 변경할때 사용하고, 빈 팩토리 후처리기는 빈 설정 메타정보가 모두 준비됐을대 빈 메타정보 자체를 조작하기 위해 사용
           - property 파일을 읽어서 메타정보의 값 정보에서 치환자(${}) 를 후처리기 시점에 찾아서 적절한 value로 바꿔준다!
-          - 빈 팩토리 후처리기가 빈 후처리기보다 앞서서 있는듯함
-            - 필드에 @Value로 셋팅하였을때, 생성자 호출하는 시점에는 값이 주입되어있지않은데, 메소드 수정자 주입시에는 값이 주입되어있었음.. (더 확실히 알기위해서 좀더 찾아봐야할듯)
-            - 빈 팩토리 후처리기는 왠지 오브젝트 생성과 초기화 사이에 이루어지는듯하다..
+            - 애매하게 정리한거 같은데, property 파일을 읽어서 메타정보의 값을 셋팅하는것은 빈 팩토리 후처리기에서 진행하고, @Value로 선언되어있는 변수에 값을 셋팅하는것은 빈 후처리기에서 진행
+          - 빈 팩토리 후처리기가 빈 후처리기보다 앞서서 있는듯함 이건당연한말.. - 빈팩토리 후처리기가 먼저 동작해서 작업진행
+            - ~~필드에 @Value로 셋팅하였을때, 생성자 호출하는 시점에는 값이 주입되어있지않은데, 메소드 수정자 주입시에는 값이 주입되어있었음.. (더 확실히 알기위해서 좀더 찾아봐야할듯)~~
+            - ~~빈 팩토리 후처리기는 왠지 오브젝트 생성과 초기화 사이에 이루어지는듯하다..~~
+              - 빈 팩토리 후처리기를 통해서 셋팅된 메타데이터를 빈 후처리기를 통해서 가져오는게 맞는말인듯
       - 능동변환(SpEL)
         - #{} 사용
         - 표현식을 사용해 다른 빈 오브젝트에 직접 접근할수도있음
@@ -1239,7 +1241,7 @@
     - 오브젝트가 빈으로 사용된다는 의미
       1. 다른 빈에 의해 DI돼서 사용되는 서비스. 즉, 클라이언트를 갖는다 (다른놈한테 호출당함)
       2. 다른 빈이나 정보를 의존하고있다 (내가 호출함)
-    - 위 두가지 특징을 잘 알고 싶다면, 빈으로 등록된 클래스의 구현 인터페이스와 프로퍼티 목록을 살펴보면됨
+    - 위 두가지 특징을 잘 알고 싶다면, 빈으로 등록된 클래스의 구현 인터페이스와 프로퍼티 목록을 살펴보면됨 (여기서 프로퍼티는 set함수)
       - 인터페이스를 통해서 클라이언트와 어떤 관계를 맺고있는지 알수있고, 제공하는 기능을 분석가능
         - 인터페이스는 빈이 제공하는 기능을 정의한것(인터페이스 분리원칙)
       - 프로퍼티는 빈의 확장 포인트를 파악할수있음
@@ -1263,11 +1265,16 @@
           - @Autowired나 @Inject 같은 어노테이션을 이용해서 빈 주입하는것도 BeanPostProcessor를 구현한 빈이 해주는 작업
             - 스캐닝을 통해 등록된 빈을 애노테이션DI를 담당하는 BeanPostProcessor가 받아서 필드나 메소드의 @Autowired를 확인하고, 그에 따라 필요한 빈을 DI해줌
           - 자동 프록시 생성기도 같은원리!
+        - 빈 후처리기는 인스턴스의 값을 조작하는것!!
       - BeanFactoryPostProcessor(빈 팩토리 후처리기)
         - 빈 팩토리에 대한 후처리기는 빈 설정 메타정보가 모두 준비됐을때 빈 메타정보 자체를 조작하기 위해 사용
           - postProcessBeanFactory 메소드 : 빈의 모든 메타정보를 담고 있는 ConfigurableListableBeanFactory 타입의 오브젝트를 전달해주는데, 바로 컨테이너 자신을 보내주는것.. 이를 이용해서 빈의 메타정보를 조작가능.. 뿐만아니라 새로운 빈을 등록도 가능..
-        - 구현체 PropertySourcesPlaceholderConfigurer 가 있는데, 이는 @Value 로 선언한곳에 적절한 프로퍼티 값을 넣어주는 역할 
+        - 구현체 PropertySourcesPlaceholderConfigurer 가 있는데, 이는 @Value에 "${}" 로 선언한곳에 적절한 프로퍼티 값을 셋팅해줌 
+          - 즉, 메타데이터 자체를 조작할수잇는 빈팩토리 후처리기를 통해, ${aa.bb} 로 정의된 놈을 어떤 값으로 치환해줄것인지를 셋팅해준다..  
+            - @Value 어노테이션이 선언되어있는 변수에 값을 셋팅해주는것은 빈 후처리기 AutowiredAnnotationBeanPostProcessor에서 진행.. 내부적으로 보니 후처리기에서 AbstractBeanFactory로 접근하여 propertySource 값을 가지고오는듯함..  
+              - PropertySourcesPlaceholderConfigurer(빈 팩토리 후처리기)를 통해 셋팅된 메타데이터를, 빈펙토리를 통해서 가져오게되는듯
           - (좀 다른 내용)이런 빈 팩토리 후처리기가 @Value를 사용한 빈 클래스보다 우선되어 적용이 되어있어야 @Value에 정상적으로 값을 전달받게되는데, 이렇게 빠르게 빈 팩토리 후처리기를 등록해야할때 static을 사용하여 @Bean을 등록하면 가능하다
+            - 보통 @Configuration 클래스에서 @Bean으로 등록할때 PropertySourcesPlaceholderConfigurer 이게 상대적으로 늦게 등록이되어 정상적으로 값을 받지 못하는 경우가 생기는데, 이때 static을 사용하여 PropertySourcesPlaceholderConfigurer를 등록하면 이런 현상을 막을수있음
             - [참고사이트](https://mangkyu.tistory.com/177)
   - 태스크 실행과 스케줄링
     - 태스크(task) : 독립적인 스레드 안에서 동작하도록 만들어진 오브젝트(독립적으로 실행가능한 오브젝트!)
@@ -1337,7 +1344,7 @@
   - 캐시 추상화
     - AOP를 이용한것!
     - 추상화 되어있기때문에 캐시 기술이 바뀌어도 괜춘!
-    - 동일한 요청이 들어오면 캐시에 보과내두었떤거를 돌려주니, 빠를뿐아니라 리소스를 아낄수있음
+    - 동일한 요청이 들어오면 캐시에 보관해두었던거를 돌려주니, 빠를뿐아니라 리소스를 아낄수있음
     - 동일한 결과 리턴하는 작업이 많고, 각 작업의 시간이 오래걸리는 경우에 사용하면좋다!
     ```java
       @Cacheable("product") //캐시에 product라는 이름으로저장
@@ -1383,18 +1390,20 @@
     - @Enable전용 애노테이션과 ImportAware 인터페이스
       - @Enable로 시작하는 애노테이션들은 모듈화된 빈 설정정보를 추가하면서 애노테이션의 엘리먼트를 사용해서 옵션들을 제공할수있도록 해주는데, ImportAware 인터페이스를 활용하면 가능!
         - 물론, 꼭 Enable로 시작해야하는것은 아니지만, 스프링의 관례이니 굳이 벗어나지말것
+        - ***고정된 값*** 넘겨줄때 사용
     - 빈 설정자
-      - 엘리먼트로는 고정된 값만 가능하기때문에, 코드를 이용해 복잡한 설정을 추가해야할 필요가 있을때 사용
+      - 엘리먼트로는 고정된 값만 가능하기때문에, ***코드를 이용해 복잡한 설정을 추가***해야할 필요가 있을때 사용
       - 대표적으로 WebMvcConfigurer가 있는데, 이를 통해서 @EnableWebMvc가 제공하는 기본 빈 설정정보에 추가해주는 역할을 한다
       - 자바 코드를 이용한 빈 설정정보 확장이 필요한 경우 @Configuration 상속보다는 @Enable 애노테이션과 빈 설정자를 활용하는 방법이 낫다!(인터페이스니깐 여러개 가능하므로!)
     - ImportSelector
-      - 애노테이션 엘리먼트에 따라 import하는 설정정보 클래스를 달리하고 싶다면 ImportSelector를 구현!
+      - 애노테이션 엘리먼트에 따라 import하는 ***설정정보 클래스***를 달리하고 싶다면 ImportSelector를 구현!
       - @Import에 ImportSelector를 구현한 클래스를 넣어줄것!
         - ImportSelector를 구현한 클래스에 설정정보 클래스를 셋팅해서 자기 자신의 빈 이름을 리턴해주면 무한 뺑뺑이 돌음..
         - ImportSelector를 구현한 클래스가 아닌, 별도의 설정클래스를 지정해야함!
+      - 프록시 사용할때, 어노테이션의 설정에따라 cglib나 jdk dynamic proxy 를 선택해서 사용가능한것도 이를 활용한것
   - 7장을 통한 기타 팁
     - 서브인터페이스는 구현 클래스들을 다시 특정 그룹으로 구분할수있는 공통 특정을 정의하는 경우에 사용
-    - 인터페이스 타입의 프로퍼티 있으면, 구현체들이 무엇이 있는지 확인해볼것!!
+    - 인터페이스 타입의 프로퍼티(setXXX 함수) 있으면, 구현체들이 무엇이 있는지 확인해볼것!!
     - RestTemplate도 RMI의 하나라는거..
       - [RestTemplate 개념 및 사용방법 정리 굿](https://sjh836.tistory.com/141)
     - ClassPathResource : 지정한 클래스 기준으로 설정파일 경로 셋팅가능
