--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -459,6 +459,7 @@
 
 
         //컨트롤러 실행하고 난 후 호출
+        //에러나면 여기 안탐 
         void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) throws Exception
 
         // 모든 뷰에서 최종 결과를 생성하는 일을 포함한 모든 작업이 다 완료된 후에 실행
@@ -554,10 +555,14 @@
     - 핸들러 예외 리졸버
       - 해당 리졸버가 등록되어있다면, DispatcherServlet이 바로 서블릿컨테이너에게 던지지않고, 핸들러 예외리졸버가 처리
       - 사용자한테 어떻게 보여줄지는 여기서 셋팅하고 자세한 로그나 알림이 필요하다면 인터셉터 핸들러의 afterCompletion을 통해서 하도록!
+        - 응답에러 코드같은거는 핸들러예외리졸버에서 처리하고, 내부적인 처리는 afterCompletion에서 하는게 좋을듯!?
       - 종류
         - AnnotationMethodHandlerExceptionResolver (디폴트)
           - 예외가 발생한 ***컨트롤러 내*** 의 메소드 중에서 @ExceptionHandler 붙은 메소드 실행
+            - @RestControllerAdvice 를 통해서 하나의 클래스에 예외를 관리할수있음(컨트롤러에서 에러 떨어지면 해당 클래스로 전달됨)
+              - @Rest~ 는 @ResponseBody 붙은거
           - 넘겨받을수 있는 파라미터들에 관한 여러 관례들이 있으니 찾아볼것!
+          
         - ResponseStatusExceptionResolver (디폴트)
           - 예외를 특정 HTTP 응답상태코드로 전환!
           - 예외클래스에 @ResponseStatus가 있는지 확인해서 있으면, 지정한 HTTP 응답코드를 전달
@@ -580,18 +585,18 @@
       - 디폴트 없어서 등록필요
       - 종류
         - CommonsMultipartResolver 
-          - 이를 사용하면, HttpSErvletRequest의 확장타입인 MultipartHttpServletRequest 오브젝트로 전환해서, 멀티파트를 디코딩한 내용과 이를 참조하거나 조작할수있는 기능을 제공해준다
-          - 애노테이션 방식의 유연한 컨트롤러 메소드를 이용하면 넘겨받는 파라미터를 바로 MultipartFile 타입의 파라미터로 받거나, 변환기를 ㅣ용해서 아예 바이트 배열이나 파일정보를 담은 오브젝트를 파라미터로 받을수도있다
+          - 이를 사용하면, HttpServletRequest의 확장타입인 MultipartHttpServletRequest 오브젝트로 전환해서, 멀티파트를 디코딩한 내용과 이를 참조하거나 조작할수있는 기능을 제공해준다
+          - 애노테이션 방식의 유연한 컨트롤러 메소드를 이용하면 넘겨받는 파라미터를 바로 MultipartFile 타입의 파라미터로 받거나, 변환기를 이용해서 아예 바이트 배열이나 파일정보를 담은 오브젝트를 파라미터로 받을수도있다
   - 스프링3.1의 MVC
     - 플래시 맵 매니저 전략
       - Post/Redirect/Get 패턴에서 사용
-        - Post/Redirect/Get 패턴 : POST 방식으로 사용자를 등록하고나면, 브라우저 새로고침시 다시 등록하게되어 등록 요청을 다시 일어나게 하는것을 막기위해 처리후에 Redirect를 통해서 다른 URL을 가진 GET 방식의 새로운 페이지로 이동시키는것이 권자오디는데, 이렇게 구성하는 방법을 말한다
+        - Post/Redirect/Get 패턴 : POST 방식으로 사용자를 등록하고나면, 브라우저 새로고침시 다시 등록하게되어 등록 요청을 다시 일어나게 하는것을 막기위해 처리후에 Redirect를 통해서 다른 URL을 가진 GET 방식의 새로운 페이지로 이동시키는것이 권장되는데, 이렇게 구성하는 방법을 말한다
         - Redirect가 일어나면, HTTP 요청이 바뀌므로 컨트롤러가 모델을 이용해서 다음 요청의 뷰로 정보를 전달시킬수없다. 그래서 리다이렉트하는 URL의 파라미터에 정보를 담거나, HTTP 세션을 이용한다
         - 그러나 사용자 정보를 저장하고 사용자 목록 페이지로 리다이렉트될때 한번만 메세지를 보여주고, 같은 페이지에서 검색 조건을 바꾸거나 직접 페이지를 갱신해서 동일한 웹 페이지가 다시 로딩되었을때는 한번만 보여주고자 한 메세지라 사라져야한다. 이럴때 세션은 계속 유지되고있으니 사용하기 어려울것이고, 파라미터 또한 계속 가지고 다니게 하기 애매하다. (또한 get방식의 파라미터를 사용하면 URL에 데이터를 노출해야하는 단점도잇음) 이런 상황에서 사용하기 좋은게 플래시 맵!
       - 플래시 맵 : 플래시 어트리뷰트를 저장하는 맵
       - 플래시 어트리뷰트 : 하나의 요청에서 생성되어 다음 요청으로 전달되는 정보
       - 플래시 어트리뷰트는 HTTP 세션보다 정보가 오래 저장되지는 않음
-      - 
+ 
       ```java
 
       // 1. flashMap 셋팅 (redirect 실행전 controller)
