--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -321,3 +321,116 @@
         - generate
           - Supplier\<T\> 를 인수로 받아서 새로운 값을 생산
           - 병렬작업시 Supplier에는 상태값이 있으면 안전하지않다!!
+    - 6장 스트림으로 데이터 수집
+    - collect에 다양한 요소 누적 방식을 인수로 받아서 스트림을 최종결과로 도출하는 리듀싱연산을 수행할수 있음(Collector를 인수로받음.. Collector는 인터페이스이고 Collectors는 Collector의 구현체들을 모아놓은 클래스)
+    - collect는 요소한개씩 가져와서 파라미터로 받은 동작을 수행하도록 해준다(리듀싱 연산)
+      - collect로 결과를 수집하는 과정을 간단하면서도 유연한 방식으로 정의할수있도록 해주는것이 컬렉터! 이 컬렉터를 통해 동작파라미터화가 가능!
+    - Collectors(클래스) 에서 제공하는 메서드 기능
+      - 스트림 요소를 하나의 값으로 리듀스하고 요약
+        - 스트림에 있는 객체의 숫자 필드의 합계나 평균등을 반환하는 연산을 요약연산이라함
+        - counting(), maxBy, minBy, summingInt, averagingInt, summarizingInt ...
+          - summarizingInt 요놈은 count, sum, min, average, max 다나옴
+        - joining을 통해서 문자열 연결도 가능
+          - 구분자 넣을수있음
+        - 위의 예처럼 특화되어있는것 말고 범용적으로 사용하기위해서는 reducing을 사용하면됨
+          - 초기값, 변환함수, 두항목을 하나로 더하는 BinaryOperator 이렇게 3개의 인수를 가짐
+          - 하나의 인수를 갖기도하는데, 스트림의 첫번째요소가 시작값이됨
+          - *collect vs reduce <span style="color:yellow">좀 더 찾아볼것 p206</span>
+            - collect 메서드 : 도출하려는 결과를 누적하는 컨테이너를 가지고 reducing
+            - reduce 메서드 : 두 값을 하나로 도출하는 불변형 연산 
+      - 요소 그룹화
+        - 그룹화할 key를 넘겨주는함수를 분류함수 라고 함 (근데 여기서 함수는 정적메서드는 아님.. 클래스에 독립되어있지않음)
+        - groupingBy에 두번째인수를 활용하여 그룹핑한 데이터에 추가적인 조작이 가능 
+          - filtering
+          - mapping
+          - flatMapping
+          - groupingBy
+            - Map\<key1, Map\<key2, List\<Dish\>\>\> 이런 형식으로 나옴
+          ```java
+            groupingBy(Dish::getType
+                        , filtering(d -> d.getCount()>5, toList())
+                      )
+            );
+          ```
+        - groupingBy(f) 는(하나의 인수만 갖는), 사실 groupingBy(f,toList()) 와 같다!
+        - 컬렉터의 결과를 다른 형식에 적용가능
+          - Collectors.collectingAndThen
+            - 적용할 컬렉터와 변환함수를 인수로 받아 다른 컬렉터를 반환해줌.. Wrapper 역할!
+      - 요소 분할
+        - Prdicate를 분류함수로 사용
+        - 맵의 키 형식은 Boolean으로, 최대 두개의 그룹을 가짐
+        - 참, 거짓 두가지 요소의 스트림 리스트를 모두 유지하는것이 분할의 장점!(필터링하면 참인것들만 되므로..)
+      - ![](collectors_static_factory_method1.jpeg)
+      - ![](collectors_static_factory_method2.jpeg)
+    - Collector 인터페이스
+      - 리듀싱 연산을 어떻게 구현할지 제공하는 메서드 집합으로 구성
+      - 이를 통해서 collect에 보내줄 리듀싱 적절하게 커스텀가능
+      ```java
+        public interface Collector<T,A,R> {
+            Supplier<A> supplier(); // 인스턴스 만들어줌..
+            BiConsumer<A,T> accumulator(); // 수집될 곳에 누적해주는곳
+            Function<A,R> finisher(); // 최종결과를 반환해줌.. 누적자를 그대로 반환할거면 항등함수(나 자신을 반환)를 반환해주는 Function.identity() 사용하면됨
+            BinaryOperator<A> combiner(); // 스트림의 서로 다른 서브파트를 병렬로 처리할때 누적자가 이 결과를 어떻게 처리할지 정의 (포크조인 프레임워크를 사용하여 병렬처리)
+            Set<Characteristics> characteristics(); //병렬로 할때 어떠한 최적화를 선택할건지에 대한 힌트
+        }
+
+        // T는 수집될 스트림 항목의 제네릭 형식
+        // A는 누적자, 즉 수집과정에서 중간 결과를 누적하는 객체의 형식
+        // R은 수집 연산 결과 객체의 형식(항상 그런것은 아니지만 대개 컬렉션형식)
+
+        /**
+            스트림 병렬 리듀싱 수행과정
+            1. 스트릠을 분할해야 하는지 정의하는 조건이 거짓으로 바뀌기 전까지 원래 스트림을 재귀적으로 분할(너무 작업의 크기가 작아지면 병렬 수행의 속도는 순차 수행의 속도보다 느려짐.. 프로세싱 코어의 갯수롤 되도록이면 초과하지말것!)
+            2. 서브 스트림의 각 요소에 리듀싱 연산을 순차적으로 적용해서 서브스트림을 병렬로 처리
+            3. 컬렉터의 combiner 메서드가 반환하는 함수로 모든 부분결과를 쌍으로 합침.. 모든 서브스트림의 결과가 합쳐지면 연산이 완료
+
+        */ 
+            
+        /**
+            Characteristics 메서드
+            - UNORDERED : 리듀싱 결과는 스트림 요소의 방문 순서나 누적 순서에 영향을 받지 않는다
+            - CONCURRENT : 다중 스레드에서 accumulator 함수를 동시에 호출할 수 있으며 이 컬렉터는 스트림의 병렬 리듀싱을 수행할수 있음 UNORDERED를 명시하지않으면, 데이터 소스가 정렬되어있지 않은(like 집합) 놈들한테만 병렬 리듀싱을 수행
+            - IDENTITY_FINISH : 누적자 객체를 최종 결과로 바로 사용
+        
+        */
+        
+      ```
+      - ![collector 인터페이스 사용 flow](sequential_reducing_flow.jpeg)
+
+  - 7장 병렬 데이터 처리와 성능
+    - 병렬 스트림
+      - 각각의 스레드에서 처리할 수 있도록 스트림 요소를 여러 청크로 분할한 스트림
+      - 내부적으로 ForkJoinPool 사용(프로세서 수 와 동일한 스레드생성)
+      - 병렬 스트림 효과적 사용하기
+        - 순차스트림과 병렬스트림을 적절한 벤치마크로 직접 성능을 측정하여 비교하는것이좋음
+          - *벤치마크 (컴퓨팅): 컴퓨터의 부품 등의 성능을 프로그램을 이용하여 비교, 평가하여 점수를 내는 결과 
+        - 자동박싱과 언박싱은 성능을 크게 저하시킬수 있으니 특화스트림을 활용하자
+        - findFirst와 같은 순서에 의존하는 연산보다는 findAny 를 병렬에서는 사용하자
+        - 소량의 데이터에서는 병렬스트림이 도움되지 않을 수 있음
+        - 스트림을 구성하는 자료구조가 적절한지 확인해야함
+          - ArrayList를 LinkedList보다 효율적으로 분할 가능.. 
+            - LinkedList는 모든 요소를 탐색해야하지만, ArrayList는 요소를 탐색하지않고도 리스트를 분할수있음
+          - range 팩토리 메서드로 만든 기본형 스트림도 쉽게 분해가능
+          |소스|분해성|
+          |--|--|
+          |ArrayList|훌륭함|
+          |LinkedList|나쁨|
+          |IntStream.range|훌륭함|
+          |Stream.iterate|나쁨|
+          |HashSet|훌륭함|
+          |TreeSet|훌륭함|
+
+        - 필터연산은 효과적인 스트림 병렬 처리가 어려움
+        - 병합과정(ex. Collector의 combiner 메서드) 비용이 비싸지않도록!
+    - 포크/조인 프레임워크
+      - 병렬화 할 수 있는 작업을 재귀적으로 작은 작업으로 분할한 다음에 서브태스크 각각의 결과를 합쳐서 전체결과를 만들도록 설계
+      - 분할 정복 알고리즘 사용
+      - 일반적으로 애플리케이션에서는 둘 이상의 ForkJoinPool을 사용하지않는다! 싱글톤으로 사용
+      - 포크/조인 프레임워크를 제대로 사용하는 방법
+        - join 메서드를 태스크에 호출하면 태스크가 생산하는 결과가 준비될떄까지 호출자를 블록시킨다.. 그렇기때문에 두 서브태스크가 모두 시작한 다음에 join을 호출할것!
+        - 왼쪽과 오른쪽 작업 모두에 fork 메서드를 호출하는것이 아닌, 한쪽잡업에는 compute를 호출하는것이 효과적!
+          - 두 서브태스크의 한 태스크에는 같은 스레드를 재사용 할 수 있으므로 풀에서 불필요한 태스크를 할당하는 오버헤드를 피할수있음(현재 스레드가 할수있는 작업을 다 마무리하는게 좋지.. 굳이 다시 새로운 스레드를 할당하는 작업할 필요가 없다는뜻)
+        - 각 서브태스크의 실행 시간은 새로운 태스크를 포킹하는데 드는 시간보다 길어야 효율적!
+      - ***작업훔치기*** 를 통해서 ForkJoinPool의 모든 스레드를 거의 공정하게 작업이 배정된다
+        - 할일이 없어진 스레드는 유휴 상태로 바뀌는것이 아니라, 다른 스레드 큐의 꼬리에서 작업을 훔쳐온다(Deque라서 가능)
+    - Spliterator 인터페이스 <span style="color:yellow">이 부분은 다시 공부해보자.. 어렵다..</span>
